force-app/main/default/objects/CC_Usuario_Genesys__c/CC_Usuario_Genesys__c.object-meta.xml
<CustomObject>
    <label>Usuario Genesys</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Login</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Usuarios Genesys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>