force-app/main/default/objects/CC_Usuario_Genesys__c/fields/CC_Acceso__c.field-meta.xml
<CustomField>
    <fullName>CC_Acceso__c</fullName>
    <description>Medios en los cuales el usuario puede atender a clientes.</description>
    <label>Acceso</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Teléfono</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Call me now</fullName>
            </value>
            <value>
                <fullName>Call me back</fullName>
            </value>
            <value>
                <fullName>Otros CSBD</fullName>
            </value>
            <value>
                <fullName>Teléfono, Chat</fullName>
                <isActive>false</isActive>
                <label>Teléfono, Chat</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>