force-app/main/default/objects/CC_Usuario_Genesys__c/fields/CC_DN__c.field-meta.xml
<CustomField>
    <fullName>CC_DN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Extensión</label>
    <length>10</length>
    <type>Text</type>
</CustomField>