force-app/main/default/objects/CC_Usuario_Genesys__c/fields/CC_Negocio__c.field-meta.xml
<CustomField>
    <fullName>CC_Negocio__c</fullName>
    <label>Negocio</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CC</fullName>
                <default>true</default>
                <label>CC</label>
            </value>
            <value>
                <fullName>CSBD</fullName>
            </value>
            <value>
                <fullName>CSBD + CC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>