force-app/main/default/objects/CC_Usuario_Genesys__c/fields/CC_User__c.field-meta.xml
<CustomField>
    <fullName>CC_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuario</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Usuarios_Genesys</relationshipName>
    <type>Lookup</type>
</CustomField>