force-app/main/default/objects/CC_Usuario_Genesys__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CC_DN__c</columns>
    <columns>CC_User__c</columns>
    <columns>CC_Acceso__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>