force-app/main/default/objects/CC_Usuario_Genesys__c/listViews/Lista_Genesys_CSBD.listView-meta.xml
<ListView>
    <fullName>Lista_Genesys_CSBD</fullName>
    <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
    <columns>NAME</columns>
    <columns>CC_User__c</columns>
    <columns>CC_DN__c</columns>
    <columns>CC_Negocio__c</columns>
    <columns>CC_Acceso__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>greaterOrEqual</operation>
        <value>1809001</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>lessOrEqual</operation>
        <value>1813000</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>greaterOrEqual</operation>
        <value>1780000</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>lessOrEqual</operation>
        <value>1780100</value>
    </filters>
    <label>CSBD - Lista Genesys</label>
    <sharedTo>
        <group>CSBD_Gerentes</group>
    </sharedTo>
</ListView>