force-app/main/default/objects/CC_Usuario_Genesys__c/listViews/Usuarios_CSBD.listView-meta.xml
<ListView>
    <fullName>Usuarios_CSBD</fullName>
    <columns>NAME</columns>
    <columns>CC_DN__c</columns>
    <columns>CC_User__c</columns>
    <columns>CC_Acceso__c</columns>
    <columns>CC_Negocio__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CC_Negocio__c</field>
        <operation>equals</operation>
        <value>CSBD</value>
    </filters>
    <label>Usuarios CSBD</label>
    <sharedTo>
        <group>CSBD_Gerentes</group>
    </sharedTo>
</ListView>