force-app/main/default/objects/CC_Usuario_Genesys__c/listViews/Usuarios_TELEF_NICA.listView-meta.xml
<ListView>
    <fullName>Usuarios_TELEF_NICA</fullName>
    <columns>NAME</columns>
    <columns>CC_DN__c</columns>
    <columns>CC_User__c</columns>
    <columns>CC_Acceso__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>182</value>
    </filters>
    <label>Usuarios TELEFÓNICA</label>
</ListView>