force-app/main/default/objects/CC_Usuario_Genesys__c/listViews/Usuarios_VALOR.listView-meta.xml
<ListView>
    <fullName>Usuarios_VALOR</fullName>
    <columns>NAME</columns>
    <columns>CC_DN__c</columns>
    <columns>CC_User__c</columns>
    <columns>CC_Acceso__c</columns>
    <columns>CC_Negocio__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>1780</value>
    </filters>
    <filters>
        <field>CC_Acceso__c</field>
        <operation>equals</operation>
        <value>Teléfono</value>
    </filters>
    <label>Usuarios +VALOR</label>
</ListView>